[project]
name = "traktexport"
version = "0.1.10"
description = "Export your Movies, TV shows and ratings from Trakt.tv"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
keywords = ["media", "movies", "export", "data"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["IPython", "backoff", "click>=8.1", "logzero", "pytrakt>=4.1.0"]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
traktexport = "traktexport.__main__:main"

[project.urls]
Homepage = "https://github.com/purarue/traktexport"

[project.optional-dependencies]
testing = ["flake8", "mypy", "pytest"]

[tool.mypy]
pretty = "True"
disallow_any_generics = "False"
show_error_context = "True"
show_error_codes = "True"
namespace_packages = "True"
disallow_subclassing_any = "True"
disallow_incomplete_defs = "True"
no_implicit_optional = "True"
warn_redundant_casts = "True"
warn_return_any = "True"
warn_unreachable = "True"

[tool.pytest.ini_options]
addopts = []

[tool.setuptools.packages.find]
include = ["traktexport"]
exclude = []
